--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 body{
+    background-color: #f9f7fe;
  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -6,10 +7,84 @@ body{
 
 }
 .weather-app{
-    background-color: plum;
+    background-color: white;
     max-width: 600px;
     margin: 45px auto;
     box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
     border-radius: 16px;
     padding: 30px;
+}
+main{
+    padding: 30px 0;
+}
+a {
+    color: #9929EA;
+    
+}
+
+header{
+    border-bottom:1px solid #f9f7fe;
+    padding:0 0 30px 0;
+    
+}
+.weather-app-data{
+    display: flex;
+    justify-content: space-between;
+}
+.weather-app-city{
+    margin: 0;
+    font-size: 38px;
+    line-height: 48px;
+}
+.weather-app-details{
+    font-size: 16px;
+    color: rgba(39, 33, 66, 0.4);
+    line-height: 24px;
+    font-weight: 500;
+}
+.weather-app-details strong{
+    color: #f65282;
+}
+.weather-app-icon{
+    font-size: 44px;
+    margin-top:22px ;
+    margin-left: 10px;
+}
+.weather-app-temperature{
+    display: flex;
+}
+.weather-app-tem{
+    font-size: 88px;
+    font-weight: bold;
+
+}
+.weather-app-unit{
+    margin-top: 16px;
+    font-size: 28px;
+
+}
+.search-form-input{
+    background-color:#f9f7fe ;
+    border: none;
+    border-radius: 6px;
+    font-size: 16px;
+    width: 70%;
+    padding: 15px 20px;
+}
+.search-form-button{
+    background-color:#9929EA;
+    padding: 15px 30px;
+    margin-left: 5px;
+    border: none;
+    border-radius: 6px;
+    color: white;
+
+}
+footer{
+    border-top: 1px solid #f9f7fe;
+    padding: 30px 0 0 0;
+   text-align: center;
+   font-size: 13px;
+   color: rgba(0, 0, 0, 0.4);
+
 }
