--- a/src/styles.css
+++ b/src/styles.css
@@ -45,21 +45,30 @@ header{
 .weather-app-details strong{
     color: #f65282;
 }
-.weather-app-icon{
-    font-size: 44px;
-    margin-top:22px ;
-    margin-left: 10px;
-}
-.weather-app-temperature{
+.weather-app-temperature-container{
     display: flex;
 }
+
+.weather-app-icon{
+    width: 88px;
+    height: 88px;
+   
+}
+.weather-app-temperature{
+display: flex;
+font-size: 88px;
+line-height: 88px;
+font-weight: bold;
+}
+
+
 .weather-app-tem{
     font-size: 88px;
     font-weight: bold;
 
 }
 .weather-app-unit{
-    margin-top: 16px;
+    margin-top: 6px;
     font-size: 28px;
 
 }
